# launcher-app

./: .flake8  .gitignore  BLUEPRINT_MIGRATION.md  BLUEPRINT_REFERENCE.md  BLUEPRINT_SUMMARY.md  CONTRIBUTING  DELIVERABLES.md  GETTING_STARTED_WITH_BLUEPRINT.md  IMPLEMENTATION_SUMMARY.md  README.md  cloud.ivanbotty.Launcher.yaml  cloud.ivanbotty.Launcherd.desktop  cloud.ivanbotty.LightFlow.desktop  cloud.ivanbotty.LightFlowD.desktop  cloud.ivanbotty.LightFlowD.service.in  compile_blueprints.py  examples_blueprint.py  launcher-wrapper.sh.in  lightflow-wrapper.sh.in  lightflowd-wrapper.sh.in  manifest.yaml  meson.build  pyproject.toml  verify_blueprints.py
assets/: cloud.ivanbotty.Launcher.metainfo.xml
cloud/: meson.build
cloud/ivanbotty/: __init__.py  common.py  meson.build
cloud/ivanbotty/Launcher/: __main__.py  app.py  meson.build
cloud/ivanbotty/Launcher/blueprint/: MIGRATION.md  README.md  SUMMARY.md  __init__.py  component_registry.py  style_blueprint.py  test_blueprint.py  test_structure.py  ui_blueprint.py
cloud/ivanbotty/Launcher/config/: config.py
cloud/ivanbotty/Launcher/controller/: __init__.py  event_base_controller.py  event_click_controller.py  event_key_controller.py  event_search_controller.py  keyboard_controller.py  search_controller.py
cloud/ivanbotty/Launcher/handlers/: ai_handler.py  applications_handler.py  base_input_handler.py  command_handler.py  extensions_handler.py  link_handler.py  math_handler.py
cloud/ivanbotty/Launcher/helper/: load_class_instance.py  parser.py  portal_launcher.py  thread_manager.py
cloud/ivanbotty/Launcher/models/: applications_model.py  extension_model.py
cloud/ivanbotty/Launcher/resources/: appdata.xml  extensions.yaml  resources.gresource  resources.xml  style.css  wizard.yaml
cloud/ivanbotty/Launcher/services/: ai_service.py  applications_service.py  command_service.py  daemon_client.py  extensions_service.py  math_service.py
cloud/ivanbotty/Launcher/widget/: footer.py  preferences.py  progress_bar.py  row.py  search_entry.py  window.py
cloud/ivanbotty/Launcherd/: __main__.py  dbus_interface.xml  dbus_service.py  meson.build
cloud/ivanbotty/LightFlow/: __main__.py  app.py  meson.build
cloud/ivanbotty/LightFlow/config/: config.py
cloud/ivanbotty/LightFlow/controller/: event_base_controller.py  event_key_controller.py  event_search_controller.py
cloud/ivanbotty/LightFlow/handlers/: ai_handler.py  applications_handler.py  base_input_handler.py  command_handler.py  extensions_handler.py  link_handler.py  math_handler.py
cloud/ivanbotty/LightFlow/helper/: parser.py  thread_manager.py
cloud/ivanbotty/LightFlow/models/: applications_model.py
cloud/ivanbotty/LightFlow/resources/: appdata.xml  extensions.yaml  resources.xml
cloud/ivanbotty/LightFlow/services/: ai_service.py  applications_service.py  command_service.py  daemon_client.py  extensions_service.py  math_service.py
cloud/ivanbotty/LightFlow/widget/: __init__.py  footer.py  preferences.py  row.py  search_entry.py  window.py
cloud/ivanbotty/LightFlowD/: __init__.py  __main__.py  dbus_interface.xml  dbus_service.py  meson.build
cloud/ivanbotty/Wizard/: BLUEPRINT_INTEGRATION.md  QUICK_REFERENCE.md  __main__.py  app.py  app_blueprint_example.py  blueprint_app.py  blueprint_ui.py  meson.build  validate_blueprint.py
cloud/ivanbotty/Wizard/components/: blueprint_pages.py  page.py
cloud/ivanbotty/Wizard/resources/: README.md  resources.xml  wizard.gresource.xml
cloud/ivanbotty/Wizard/resources/blueprints/: summary-page.blp  welcome-page.blp  wizard-page.blp  wizard-window.blp
cloud/ivanbotty/database/: __init__.py  meson.build  sqlite3.py
cloud/ivanbotty/utils/: __init__.py  app_init.py  meson.build
docs/: DAEMON_INTEGRATION.md  ONBOARDING_FLOW.md  ONBOARDING_VISUAL_REFERENCE.md  UI_ENHANCEMENTS.md  UI_IMPLEMENTATION_SUMMARY.md  UI_VISUAL_REFERENCE.md
tests/: __init__.py  test_daemon_integration.py  test_helpers.py  test_onboarding_config.py  test_performance.py  test_portal_launcher.py  test_utils.py
ui/: footer.blp  footer.ui  list_row.blp  list_row.ui  main_window.blp  main_window.ui  preferences.blp  preferences.ui  search_entry.blp  search_entry.ui
wiki/: API-Reference.md  Architecture.md  Changelog.md  Configuration.md  Contributing.md  FAQ.md  Features.md  Home.md  Installation.md  License.md  README.md  Usage-Guide.md
